[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/components/Countdown.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/dark.tres" type="Theme" id=3]

[node name="CountdownContainer" type="VBoxContainer"]
anchor_left = 0.0605469
anchor_right = 0.939453
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_constants/separation = 20
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 50.0
one_shot = true

[node name="Time" type="VBoxContainer" parent="."]
margin_top = 70.0
margin_right = 899.0
margin_bottom = 362.0
custom_constants/separation = 20
alignment = 1

[node name="Countdown" type="Label" parent="Time"]
margin_right = 899.0
margin_bottom = 52.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Time"]
margin_top = 72.0
margin_right = 899.0
margin_bottom = 76.0

[node name="Hour" type="LineEdit" parent="Time"]
margin_top = 96.0
margin_right = 899.0
margin_bottom = 148.0
align = 1
placeholder_text = "Hours"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minutes" type="LineEdit" parent="Time"]
margin_top = 168.0
margin_right = 899.0
margin_bottom = 220.0
align = 1
placeholder_text = "Minutes"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seconds" type="LineEdit" parent="Time"]
margin_top = 240.0
margin_right = 899.0
margin_bottom = 292.0
align = 1
placeholder_text = "Seconds"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 382.0
margin_right = 899.0
margin_bottom = 386.0

[node name="Buttons" type="VBoxContainer" parent="."]
margin_top = 406.0
margin_right = 899.0
margin_bottom = 530.0
custom_constants/separation = 20

[node name="StartTimer" type="Button" parent="Buttons"]
margin_right = 899.0
margin_bottom = 52.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTimer" type="Button" parent="Buttons"]
margin_top = 72.0
margin_right = 899.0
margin_bottom = 124.0
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AcceptDialog" type="AcceptDialog" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -29.0
margin_right = 87.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 85.6584, 18.4822 )
theme = ExtResource( 3 )
window_title = "Countdown finished"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Buttons/StartTimer" to="." method="_on_StartTimer_pressed"]
[connection signal="pressed" from="Buttons/PauseTimer" to="." method="_on_PauseTimer_pressed"]
